Bug 405248 - Space between embedded objects characters is missing r=aaronleventhal a=mtschrep